--- a/res/values/menus.xml
+++ b/res/values/menus.xml
@@ -4,5 +4,6 @@
    
     <menu name="main">res/menu/main.xml</menu>
 	<menu name="admin">res/menu/admin.xml</menu>
+	    <menu name="signup">res/menu/signup.xml</menu>
     
 </resources>
