--- a/res/values/menus.xml
+++ b/res/values/menus.xml
@@ -5,5 +5,6 @@
     <menu name="main">res/menu/main.xml</menu>
 	<menu name="admin">res/menu/admin.xml</menu>
 	    <menu name="signup">res/menu/signup.xml</menu>
+		  <menu name="resetuser">res/menu/resetuser.xml</menu>
     
 </resources>
