--- a/res/layout/activityresetuser.xml
+++ b/res/layout/activityresetuser.xml
@@ -1,46 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
-    <EditText 
-	android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
-	android:id="@+id/e1" 
-	android:layout_width="wrap_content" 
-	android:layout_height="wrap_content" 
-	android:hint="enter login id" />
-    <EditText
-	android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
-	android:id="@+id/e2"
-	android:layout_width="wrap_content" 
-	android:layout_height="wrap_content" 
-	android:layout_marginTop="20dp" a
-	ndroid:hint="enter adhar id" />
-    <Button 
-	android:textSize="20sp" 
-	android:textColor="#ffffff" 
-	android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" 
-	android:id="@+id/b1"
-	android:background="#1e90ff" 
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content" 
-	android:layout_marginTop="20dp"
-	android:text="Reset status" 
-	android:width="250dp" />
-    <TextView 
-	android:textSize="15sp" 
-	android:textColor="#ff0000"
-	android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" 
-	android:id="@+id/t1" 
-	android:layout_width="wrap_content" 
-	android:layout_height="wrap_content" 
-	android:layout_marginTop="20dp" 
-	android:text="OR" />
-    <Button android:textSize="20sp" 
-	android:textColor="#ffffff" 
-	android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" 
-	android:id="@+id/b2"
-	android:background="#1e90ff" 
-	android:layout_width="wrap_content"
-	android:layout_height="wrap_content"
-	android:layout_marginTop="20dp"
-	android:text="Reset all user status"
-	android:width="250dp" />
+    <EditText android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/e1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="enter login id" />
+    <EditText android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/e2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:hint="enter adhar id" />
+    <Button android:textSize="20sp" android:textColor="#ffffff" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/b1" android:background="#1e90ff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="Reset status" android:width="250dp" />
+    <TextView android:textSize="15sp" android:textColor="#ff0000" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/t1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="OR" />
+    <Button android:textSize="20sp" android:textColor="#ffffff" android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/b2" android:background="#1e90ff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="Reset all user status" android:width="250dp" />
 </LinearLayout>
